tests/invalid_nodepend/bad_fact_table.err_exp
bad_fact_table.m:018: Error: function [38;5;87m`foo'/1[39;49m [38;5;203mhas no clauses.[39;49m
bad_fact_table.m:019: Error: predicate [38;5;87m`bar'/2[39;49m [38;5;203mhas no clauses.[39;49m
bad_fact_table.m:021: Error: predicate [38;5;87m`baz'/2[39;49m [38;5;203mhas no clauses.[39;49m
bad_fact_table.m:022: Error: function [38;5;87m`baz'/2[39;49m [38;5;203mhas no clauses.[39;49m
bad_fact_table.m:026: mercury_compile: error opening file `nonexistent_foo' for
bad_fact_table.m:026:   input:
bad_fact_table.m:026:   can't open input file: No such file or directory
bad_fact_table.m:027: mercury_compile: error opening file `nonexistent_bar' for
bad_fact_table.m:027:   input:
bad_fact_table.m:027:   can't open input file: No such file or directory
bad_fact_table.m:028: In `:- pragma fact_table' declaration for [38;5;87m`baz'/2:[39;49m
bad_fact_table.m:028:   error: [38;5;203mambiguous name could refer to either a predicate[39;49m
bad_fact_table.m:028:   [38;5;203mor a function.[39;49m
